# python-starlark-go

./: .clang-format  .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  build_ffi.py  development.txt  fibonacci.star  go.mod  go.sum  pyproject.toml  pystarlark.c  python_eval.go  python_exceptions.go  python_globals.go  python_mapping.go  python_object.go  python_print.go  python_to_starlark.go  setup.cfg  setup.py  starlark.c  starlark.go  starlark.h  starlark_go.c  starlark_go.go  starlark_to_python.go  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  build_wheels.yml  bumpr.yml  codeql-analysis.yml  devcontainer.yml  test.yml  update-starlark.yml  valgrind.yml  zizmor-security-analysis.yml
docs/: requirements.txt
docs/source/: conf.py  index.md  reference.md  usage.md
pystarlark/: __init__.py
scripts/: install-go.sh  pytest-valgrind.sh  pytest-valgrind.supp  setup-linux.sh  setup-macos.sh  setup-universal.sh  update-starlark.sh
src/pystarlark/: __init__.py  _lib.pyi  errors.py  starlark_go.c  starlark_go.go  starlark_go.pyi
src/pystarlark/_lib/: starlark_go.pyi
src/starlark_go/: __init__.py  errors.py  starlark_go.pyi
tests/: fibonacci.star  test.py  test_builtins.py  test_configure.py  test_conversion_to_python_failed.py  test_conversion_to_starlark_failed.py  test_evalerror.py  test_fibonacci.py  test_get_globals.py  test_import_exceptions.py  test_multi_exec.py  test_parse.py  test_pop_global.py  test_print.py  test_resolveerror.py  test_set_globals.py  test_subscript.py  test_syntaxerror.py  test_timeout.py  test_values.py
