[build-system]
requires = [
  "setuptools >= 40.6.0",
  "wheel",
  "setuptools_scm[toml]>=3.4",
  "setuptools-golang>=2.7",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/pystarlark/scmversion.py"

[tool.isort]
profile = "black"
lines_between_types = 1
