[build-system]
requires = [
  "setuptools >= 40.6.0",
  "wheel",
  "setuptools_scm[toml]>=3.4",
  "setuptools-golang>=2.7",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/starlark_go/scmversion.py"

[tool.isort]
profile = "black"
lines_between_types = 1

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_*"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
before-all = "sh ./scripts/install-go.sh"
archs = ["x86_64", "i686", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
test-skip = ["*_universal2:arm64"]
