[metadata]
name = starlark-go
description = Python bindings for the Go implementation of Starlark
long_description = file:README.md
long_description_content_type = text/markdown
author = Jordan Webb
author_email = jordan@caketop.app
url = https://github.com/caketop/python-starlark-go
keywords = starlark
license = Apache License 2.0
license_file = LICENSE
project_urls =
  Documentation = https://python-starlark-go.readthedocs.io/en/latest/
  Bug Tracker = https://github.com/caketop/python-starlark-go/issues
  Source Code = https://github.com/caketop/python-starlark-go
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13

[options]
packages = find:
package_dir =
  = src
include_package_data = True
python_requires = >= 3.8
setup_requires =
  setuptools_scm[toml] >= 3.4
  setuptools-golang >= 2.7

[options.packages.find]
where=src

[options.package_data]
starlark_go =
  *.pyi
  py.typed

[tox:tox]
envlist = py38, py39, py310, py311, py312, py313

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
deps =
  -r development.txt
  pytest-memray
commands = pytest -v --memray {posargs}

[testenv:py313]
deps = -r development.txt
commands = pytest -v {posargs}

[flake8]
max-line-length = 88
extend-ignore = E203, W503
